--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,22 @@ dependencies:
   country_code_picker: ^3.0.0
   country_picker: ^2.0.25
   cloud_firestore: ^4.15.6
+  web3dart: ^2.7.3
+  web_socket_channel: ^2.4.5
+  http: ^1.2.1
+  local_auth: ^2.2.0
+  intl_phone_number_input: ^0.7.4
+  pinput: ^4.0.0
+  loader_overlay: ^4.0.0
+  url_launcher: ^6.2.6
+  web3modal_flutter: ^3.1.3
+  encrypt: ^5.0.3
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -55,6 +67,12 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "lib/icons/logoo.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "lib/icons/logo_foreground.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
